[package]
name = "tvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = {git = "https://github.com/rust-blockchain/evm.git"}
primitive-types = { version = "0.11", default-features = false, features = ["rlp"] }
hex = "0.4"